2002-06-10  Darin Adler  <darin@apple.com>

	* WebCoreSupport.subproj/IFTextRenderer.m:
	(-[IFTextRenderer drawCharacters:length:atPoint:withColor:]):
	Fix a typo where I left the S off of DRAW_WITHOUT_ADVANCES.

2002-06-10  Richard Williamson  <rjw@apple.com>

    90% solution to round-off problem.  khtml breaks measures text on space
    boundaries during layout.  It assumes integer measurement, CG uses float
    measurements.  Some common fonts have non-integer space width.  So, 
    differences in between drawing advances and measurement of space characters
    can easily accumulate enough to be visually apparent.  We may still accumulate
    differences across words, although it's much less visible than for spaces.
    As a next step we can fudge the advances of words to force
    integer widths, although I think, given how khtml work, just accounting for
    consistency in measuring and drawing spaces may be sufficient.
    Many sites that looked flaky before now render correctly.
    
	* WebCoreSupport.subproj/IFTextRenderer.m:
	(-[IFTextRenderer drawCharacters:length:atPoint:withColor:]):
	
	Force rounding of advance for space characters.
	
	(-[IFTextRenderer floatWidthForCharacters:length:]):

	Force rounding of measurement for space characters.

2002-06-09  John Sullivan  <sullivan@apple.com>

	WebKit part of fix for 2949646 (Can't drag & drop bookmarks
	into auto-expanded folder). To get this to work right, I gave
	each bookmark a unique (per-session) identifier.

	While working on this, I found and fixed some leaks of bookmarks.

	* Bookmarks.subproj/IFBookmark.h:
	New -[identifier] method and _identifier ivar.

	* Bookmarks.subproj/IFBookmark.m:
	(+[IFBookmark _generateUniqueIdentifier]):
	(-[IFBookmark init]):
	(-[IFBookmark dealloc]):
	Remember unique identifier in each bookmark as it is created;
	delete when dealloc'd.

	(-[IFBookmark identifier]): Return unique identifier.

	(-[IFBookmark _setParent:]): Don't retain parent, to avoid